<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin_8"
                android:background="@drawable/bg_search_text"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/default_margin_8"
                    android:layout_marginEnd="@dimen/default_margin_8"
                    android:contentDescription="@string/btn_back"
                    android:rotation="180"
                    android:src="@drawable/ic_arrow"
                    app:tint="@color/colorLightHint" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilSearch"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:endIconMode="clear_text"
                    app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/search_by_name"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/default_margin_10" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSearchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/default_margin_8"
                    android:contentDescription="@string/btn_search"
                    android:src="@drawable/ic_search"
                    app:tint="@color/colorLightHint" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchDrinks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingTop="@dimen/default_margin_8" />

    </LinearLayout>

    <include layout="@layout/layout_progress_bar" />

</FrameLayout>